# libilclient

./: .gitignore  configure.ac
debian/: .gitignore  changelog  control  copyright
src/: .gitignore  Makefile.am
