# Prelude
AC_INIT([ilclient], [1.0], [bug-report@piwall.co.uk])
LT_INIT
# Sanity check
AC_CONFIG_SRCDIR([src/ilclient.c])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# Checks for programs
AM_PROG_CC_C_O
# Checks for libraries
## None

# Output files
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

