# Prelude
AC_INIT([ilclient], [1.0], [bug-report@piwall.co.uk])
# Sanity check
AC_CONFIG_SRCDIR([src/ilclient.c])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# Checks for programs
AM_PROG_CC_C_O
AM_PROG_AR
# Checks for libraries
## None
LT_INIT

# Output files
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

